objects/Vendor__c.object
<CustomObject>
    <description>A service vendor who fulfils maintenance requests.</description>
    <fields>
        <fullName>City__c</fullName>
        <label>City</label>
        <length>120</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Email__c</fullName>
        <label>Email</label>
        <type>Email</type>
    </fields>
    <fields>
        <fullName>Phone__c</fullName>
        <label>Phone Number</label>
        <type>Phone</type>
    </fields>
    <label>Vendor</label>
    <listViews>
        <fullName>All_Vendors</fullName>
        <columns>NAME</columns>
        <columns>Phone__c</columns>
        <columns>Email__c</columns>
        <filterScope>Everything</filterScope>
        <label>All Vendors</label>
    </listViews>
    <nameField>
        <label>Vendor Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Vendors</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
    <validationRules>
        <fullName>Phone_Format</fullName>
        <active>true</active>
        <description>Ensures Phone contains only digits, spaces, plus, hyphens and parentheses and is 10-20 characters long.</description>
        <errorConditionFormula>AND(NOT(ISBLANK(Phone__c)), NOT(REGEX(Phone__c, &quot;[-+ ()0-9]{10,20}&quot;)))</errorConditionFormula>
        <errorDisplayField>Phone__c</errorDisplayField>
        <errorMessage>Please enter a valid phone number (digits, spaces, +, -, () only; 10-20 characters).</errorMessage>
    </validationRules>
</CustomObject>